# wxTetris

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: button.cpp  button.h  icon.cpp  icon.h  simple.h
